crates/tree-sitter/grammar.js
    source_file: ($) =>
      repeat(
        choice(
          $.config_decl, // Declaration of CONFIGURATION and RESOURCE
          $.prog_decl, // Declaration of PROGRAM
          $.namespace_decl, // Declaration of NAMESPACE (including all other declarations)
          // Global POUs declarations
          $.data_type_decl,
          $.func_decl,
          $.fb_decl,
          $.class_decl,
          $.interface_decl,
          // Global using
          $.using_directive,
          //$.ERR_invalid_pou_keyword,
        ),
      ),

    // Other - Errors

    // Pou declaration errors
    // Note that this error is rather consuming and i'm unsure if it should be kept
    pragma_string: (_) => /\'[^\']*\'/,

    // Warn/info pragma - emits a diagnostic at call sites of the annotated POU
    // {warn = 'message'} or {info = 'message'}
    allow_pragma: ($) =>
      prec(1, seq(
        "{",
        "allow",
        repeat1(field("rule", $.pragma_string)),
        "}",
      )),

    // Test pragma - marks a POU as a test entry point
    // {test}
    pou_pragma: ($) =>
      choice(
        $.test_pragma,
        $.once_pragma,
        $.export_pragma,
        $.warn_pragma,
        $.extern_pragma,
        $.allow_pragma,
      ),

    // Table 5 - Numeric literal

    constant: ($) =>
      choice($.numeric_literal, $.char_literal, $.time_literal, $.bool_literal),

    numeric_literal: ($) => choice($.real_literal, $.int_literal),

    int_literal: ($) =>
      seq(
        optional(seq(field("kind", $.int_kind), "#")),
        field(
          "int",
          choice($.signed_int, $.binary_int, $.octal_int, $.hex_int),
        ),
      ),

    unsigned_int: ($) => token(/[0-9][0-9_]*/),

    // token() prevents whitespace between sign and digits:
    // -42 is a signed literal, - 42 is unary minus on 42.
    // No precedence needed - token boundary disambiguates.
    signed_int: ($) =>
      choice(
        $._explicit_signed_int,
        $.unsigned_int,
      ),

    _explicit_signed_int: (_) =>
      token(seq(choice("+", "-"), /[0-9][0-9_]*/)),

    // At least one digit, each one or the first after an optional '_'. A
    // class written `[?:...]` took '?' and ':' as digits, so `16#FF:` as a
    // CASE label swallowed its colon.
    hex_int: (_) => token(seq("16#", /_?[0-9a-fA-F][_0-9a-fA-F]*/)),

    bool_literal: ($) =>
      choice($.bool_literal_with_string, $.bool_literal_with_numeric),

    bool_literal_with_string: ($) =>
      seq(optional(kw("BOOL#")), field("value", choice(kw("TRUE"), kw("FALSE")))),
    bool_literal_with_numeric: ($) =>
      seq(kw("BOOL#"), field("value", choice("0", "1"))),

    // Table 6 - Character String literals
    // Table 7 - Two-character combinations in character strings

    char_literal: ($) =>
      seq(
        optional(seq(field("kind", $.string_type_name), "#")),
        field("value", $.char_str),
      ),

    char_str: ($) =>
      choice(prec(-1, $.hex_int), $.s_byte_char_str, $.d_byte_char_str),

    // One token each: as sequences, an extra could stand between the quote
    // and the characters, and `(*` inside a literal opened a comment that
    // swallowed the file. The escapes of Table 7 are inlined for the same
    // reason; a token holds no rule references.
    s_byte_char_str: (_) =>
      token(
        seq(
          "'",
          repeat(
            choice(
              /[^'\n\r$]/,
              "$'",
              '"',
              "$$",
              /\$[LNPRTlnprt]/,
              /\$[0-9A-Fa-f]{2}/,
            ),
          ),
          "'",
        ),
      ),

    time_literal: ($) =>
      choice($.duration, $.time_of_day, $.date, $.date_and_time),

    duration: ($) => choice($.time, $.ltime),

    time: ($) =>
      seq(
        alias(ciPrefix("TIME", "T"), $.time_type_name),
        field("sign", optional(choice("+", "-"))),
        field("value", $.time_value),
      ),

    time_value: ($) => /[0-9a-zA-Z_]+(\.[0-9][0-9a-zA-Z_]*)*/,

    time_of_day: ($) => choice($.tod, $.ltod),

    tod: ($) =>
      seq(
        alias(ciPrefix("TIME_OF_DAY", "TOD"), $.tod_type_name),
        field("value", $.daytime),
      ),

    daytime: ($) => /[0-9a-zA-Z_]+([.:][0-9][0-9a-zA-Z_]*)*/,

    date_and_time: ($) => choice($.short_date_and_time, $.long_date_and_time),

    short_date_and_time: ($) =>
      seq(
        alias(ciPrefix("DATE_AND_TIME", "DT"), $.date_and_time_type_name),
        field("value", $.date_and_daytime),
      ),

    long_date_and_time: ($) =>
      seq(
        alias(ciPrefix("LDATE_AND_TIME", "LDT"), $.l_date_and_time_type_name),
        field("value", $.date_and_daytime),
      ),

    date_and_time_type_name: ($) => ciChoice("DATE_AND_TIME", "DT"),
    l_date_and_time_type_name: ($) => ciChoice("LDATE_AND_TIME", "LDT"),

    // Was /[0-9dhmsDHMS_.:-]+/ — the dhms subset meant `DT#garbage` could not
    // lex at all and shredded into an identifier (a bogus E0201). Any letter
    // is a value now; the HIR answers with its date-format diagnostic.
    date_and_daytime: ($) => /[0-9a-zA-Z_]+([.:-][0-9][0-9a-zA-Z_]*)*/,

    // Table 10 - Elementary data types

    _elem_type_name: ($) =>
      choice(
        $.numeric_type_name,
        $.bit_str_type_name,
        $.date_type_name,
        $.l_date_type_name,
        $.time_type_name,
        $.l_time_type_name,
        $.tod_type_name,
        $.ltod_type_name,
        $.dt_type_name,
        $.l_dt_type_name,
        $.string_type_name,
      ),

    numeric_type_name: ($) => choice($.int_type_name, $.real_type_name),

    int_type_name: ($) => choice($.sign_int_type_name, $.unsign_int_type_name),

    sign_int_type_name: ($) =>
      choice(
        alias(kw("SINT"), $.sint_name),
        alias(kw("INT"), $.int_name),
        alias(kw("DINT"), $.dint_name),
        alias(kw("LINT"), $.lint_name),
      ),

    string_type_name: ($) => choice($.string_name, $.char_name),

    // The length is a constant EXPRESSION, not just a literal: `STRING[SIZE]`
    // for a CONSTANT is as legal as `STRING[80]`, exactly as an array bound is.
    // Whether it FOLDS is the checker's business (E0812), not the parser's.
    string_name: ($) =>
      seq(kw("STRING"), optional(seq("[", field("length", $.constant_expr), "]"))),
    time_type_name: ($) => ciChoice("TIME"),
    tod_type_name: ($) => ciChoice("TIME_OF_DAY", "TOD"),
    dt_type_name: ($) => ciChoice("DATE_AND_TIME", "DT"),
    l_dt_type_name: ($) => ciChoice("LDATE_AND_TIME", "LDT"),

    bit_str_type_name: ($) =>
      choice(alias(kw("BOOL"), $.bool_name), $.multibits_type_name),

    multibits_type_name: ($) =>
      choice(
        alias(kw("BYTE"), $.byte_name),
        alias(kw("WORD"), $.word_name),
        alias(kw("DWORD"), $.dword_name),
        alias(kw("LWORD"), $.lword_name),
      ),

    // Table 11 - Declaration of user-defined data types and initialization

    data_type_decl: ($) =>
      seq(kw("TYPE"), repeat(seq($.type_decl, optional(";"))), kw("END_TYPE")),

    // Type_Decl : Simple_Type_Decl | Subrange_Type_Decl | Enum_Type_Decl | Array_Type_Decl | Struct_Type_Decl |
    //  Str_Type_Decl | Ref_Type_Decl;
    type_decl: ($) =>
      seq(
        field("name", $.identifier),
        useSpecInit(
          ["simple", "subrange", "enum", "array", "struct", "ref"],
          [
            "simple",
            //"subrange", handled by simple
            //"enum", handled by simple
            "array",
            "struct",
            // "ref", handled in primary_expression
          ],
        )($),
      ),

    ...createSpecInit(
      "simple",
      ($) => $.data_type_access,
      ($) => seq(":=", $.constant_expr),
    ),

    ...createSpecInit(
      "subrange",
      ($) =>
        seq(
          field("type", $._elem_type_name),
          "(",
          field("range", $.subrange),
          ")",
        ),
      ($) => $.simple_type_init,
    ),

    subrange: ($) =>
      seq(
        field("lower", $.constant_expr),
        "..",
        field("upper", $.constant_expr),
      ),

    // Enum_Type_Decl : Enum_Type_Name ':' ( ( Elem_Type_Name ? Named_Spec_Init ) | Enum_Spec_Init );
    // Enum_Spec_Init : ( ( '(' Identifier ( ',' Identifier )* ')' ) | Enum_Type_Access ) ( ':=' Enum_Value )?;
    ...createSpecInit(
      "enum",
      ($) => $.enum_spec,
      ($) => seq(":=", $.namespace_access),
    ),

    //enum_spec: $ => seq('(', commaSep($.identifier), ')'),

    // Named_Spec_Init : '(' Enum_Value_Spec ( ',' Enum_Value_Spec )* ')' ( ':=' Enum_Value )?;
    enum_spec: ($) =>
      seq(
        field("elem_type", optional($._elem_type_name)),
        "(",
        commaSep($.enum_value_spec),
        ")",
      ),

    enum_value_spec: ($) =>
      seq(field("value", $.identifier), optional(seq(":=", $._expression))),

    variable: ($) => choice($.begin_path_expression, $.direct_variable),

    // Var_Access : Variable_Name;
    var_access: ($) =>
      choice(
        $.ERR_unexpected_this_in_path,
        $.ERR_unexpected_super_in_path,
        alias($.identifier, $.field),
      ),

    // A section ends with an optional `;`, and a statement list may begin
    // with an empty statement: after `END_VAR ;` both readings fit, and
    // `prec.right` keeps the `;` with the section, as before. Every section
    // a body can follow is wrapped the same way, and so is USING.
    var_decl_init: ($) =>
      useSpecInit(
        ["simple", "subrange", "ref", "array", "struct"],
        [
          "simple",
          "array",
          "struct",
        ],
      )($),

    // ( Simple_Spec | Str_Var_Decl | Array_Var_Decl | Struct_Var_Decl )

    // INOUT
    // TEMP
    variable_list: ($) => commaSep1($.identifier),

    var_decls: ($) =>
      prec.right(
        seq(
          kw("VAR"),
          field("constant", optional(kw("CONSTANT"))),
          field("access", optional($.access_spec)),
          repeat(
            seq(
              choice(
                $.var_decl_init_list,
                $.loc_var_decl,
                $.ERR_variable_with_no_spec,
              ),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    var_decl_init_list: ($) =>
      seq(field("variables", $.variable_list), field("type", $.var_decl_init)),

    func_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION"),
        field("spec", optional($.access_spec)),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._func_variables)),
        field("body", optional($.func_body)),
        kw("END_FUNCTION"),
      ),

    _func_variables: ($) =>
      choice(...io_var_decls($), ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed
      ),

    func_body: ($) => choice($.ladder_diagram, $.fb_diagram, $.stmt_list),

    // Table 40 – Function block type declaration
    // Table 41 - Function block instance declaration

    fb_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("FUNCTION_BLOCK"),
        field("qualifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("name", $.identifier),
        optional($.ERR_implements_before_extends),
        optional(seq(kw("EXTENDS"), field("extends", $.namespace_access))),
        optional(repeat($.ERR_extends_multiple_times)),
        optional(seq(kw("IMPLEMENTS"), field("implements", $.interface_name_list))),
        optional(repeat($.ERR_implements_multiple_times)),
        field("directives", repeat($.using_directive)),
        field("variables", repeat($._fb_variables)),
        field("method", repeat($.method_decl)),
        optional($.ERR_fb_variables_after_method),
        field("body", optional($.fb_body)),
        kw("END_FUNCTION_BLOCK"),
      ),

    _fb_variables: ($) =>
      choice(
        $.fb_input_decls,
        $.fb_output_decls,
        $.in_out_decls,
        $.temp_var_decls,
        ...func_var_decls($),
        ...other_var_decls($),
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    fb_input_decls: ($) =>
      prec.right(
        seq(
          kw("VAR_INPUT"),
          field("retain", optional(choice(kw("RETAIN"), kw("NON_RETAIN")))),
          repeat(
            seq(
              choice($.fb_input_var, $.ERR_variable_with_no_spec),
              optional(";"),
            ),
          ),
          kw("END_VAR"),
          optional(";"),
        ),
      ),

    fb_input_var: ($) =>
      seq(
        field("variables", $.variable_list),
        field("type", $._fb_input_var_kind),
      ),

    _fb_input_var_kind: ($) =>
      choice(
        $.var_decl_init,
        $.edge_decl,
        $.array_conformand,
        $.ERR_variadic_fb_input,
      ),

    fb_body: ($) => choice($.SFC, $.ladder_diagram, $.fb_diagram, $.stmt_list),

    method_decl: ($) =>
      seq(
        field("pragmas", repeat($.pou_pragma)),
        kw("METHOD"),
        field("access", optional($.access_spec)),
        field("modifier", optional(choice(kw("FINAL"), kw("ABSTRACT")))),
        field("_override", optional(kw("OVERRIDE"))),
        field("name", $.identifier),
        optional(seq(":", field("return_type", $.data_type_access))),
        field(
          "variables",
          repeat(
            $._method_decl_variables
          ),
        ),
        field("body", optional($.func_body)),
        kw("END_METHOD"),
      ),

    _method_decl_variables: ($) =>
      choice(
        ...io_var_decls($),
        ...func_var_decls($),
        $.temp_var_decls,
        $.ERR_var_access_not_allowed,
        $.ERR_var_config_not_allowed,
        $.ERR_var_external_not_allowed,
        $.ERR_var_global_not_allowed,
      ),

    // Table 48 - Class
    // Table 50 Textual call of methods – Formal and non-formal parameter list

    namespace_decl: ($) =>
      seq(
        kw("NAMESPACE"),
        field("internal", optional(kw("INTERNAL"))),
        field("name", $.namespace_h_name),
        field("directives", repeat($.using_directive)),
        field("elements", optional($.namespace_elements)),
        kw("END_NAMESPACE"),
      ),

    namespace_elements: ($) =>
      repeat1(
        choice(
          $.data_type_decl,
          $.func_decl,
          $.fb_decl,
          $.class_decl,
          $.interface_decl,
          $.namespace_decl,
          //$.ERR_invalid_pou_keyword,
          $.ERR_program_not_allowed_in_namespace,
          $.ERR_config_not_allowed_in_namespace,
        ),
      ),

    namespace_h_name: ($) => dotSep1($.identifier),

    _expression: ($) =>
      choice(
        $.fold_expression,
        $.boolean_operator,
        $.comparison_operator,
        $.add_operator,
        $.mult_operator,
        $.power_operator,
        $.unary_operator,
        $._primary_expression,
      ),

    // Fold expression: variadic parameter folded with a binary operator
    // e.g. ...IN+ (left fold: IN[0] + IN[1] + ... + IN[N-1])
    boolean_operator: ($) =>
      choice($.or_operator, $.xor_operator, $.and_operator),

    comparison_operator: ($) => choice($.eq_operator, $.ord_operator),

    ord_operator: ($) =>
      prec.left(
        RK_PREC.comparison,
        seq(
          field("left", $._expression),
          field("operator", $.ord),
          field("right", $._expression),
        ),
      ),

    constant_expr: ($) => $._expression,

    variable_access: ($) =>
      seq(
        field("variable", $.variable),
        field("access", optional($.multibit_part_access)),
      ),

    assignment: ($) => seq(":=", $._expression),
