crates/tree-sitter/test/corpus/case_insensitivity.txt
================================================================================
Keywords in lowercase
================================================================================

function fn : int
var
	x : int;
end_var
	if x > 0 then
		fn := 1;
	end_if;
end_function

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    variables: (var_decls
      (var_decl_init_list
        variables: (variable_list
          (identifier))
        type: (var_decl_init
          spec: (simple_type_spec
            (numeric_type_name
              (int_type_name
                (sign_int_type_name
                  (int_name))))))))
    body: (func_body
      (stmt_list
        (if_stmt
          if_cond: (comparison_operator
            (ord_operator
              left: (variable_access
                variable: (variable
                  (begin_path_expression
                    (path_expression
                      (var_access
                        (field))))))
              right: (constant
                (numeric_literal
                  (int_literal
                    int: (signed_int
                      (unsigned_int)))))))
          if_body: (stmt_list
            (assign
              variable: (variable_access
                variable: (variable
                  (begin_path_expression
                    (path_expression
                      (var_access
                        (field))))))
              target: (assignment
                (constant
                  (numeric_literal
                    (int_literal
                      int: (signed_int
                        (unsigned_int)))))))))))))

================================================================================
Keywords in mixed case
================================================================================

Function fn : Int
	If TRUE Then
		fn := 1;
	End_If;
End_Function

--------------------------------------------------------------------------------

(source_file
  (func_decl
    name: (identifier)
    return_type: (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    body: (func_body
      (stmt_list
        (if_stmt
          if_cond: (constant
            (bool_literal
              (bool_literal_with_string)))
          if_body: (stmt_list
            (assign
              variable: (variable_access
                variable: (variable
                  (begin_path_expression
                    (path_expression
                      (var_access
                        (field))))))
              target: (assignment
                (constant
                  (numeric_literal
                    (int_literal
                      int: (signed_int
                        (unsigned_int)))))))))))))

================================================================================
A lowercase keyword is still a reserved word
:error
================================================================================

CLASS class END_CLASS

--------------------------------------------------------------------------------



================================================================================
Temporal type names and typed-literal prefixes in any case
================================================================================

FUNCTION f : INT
VAR
	a : dt := dt#2024-01-01-12:00:00;
	b : Time := Time#1s;
	c : time_of_day := Tod#12:00:00;
	d : bool := bool#1;
	e : LDATE_AND_TIME := ldt#2024-01-01-12:00:00;
END_VAR
	f := 1;
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    (var_decls
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (dt_type_name))
          (simple_type_init
            (constant_expr
              (constant
                (time_literal
                  (date_and_time
                    (short_date_and_time
                      (date_and_time_type_name)
                      (date_and_daytime)))))))))
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (time_type_name))
          (simple_type_init
            (constant_expr
              (constant
                (time_literal
                  (duration
                    (time
                      (time_type_name)
                      (time_value)))))))))
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (tod_type_name))
          (simple_type_init
            (constant_expr
              (constant
                (time_literal
                  (time_of_day
                    (tod
                      (tod_type_name)
                      (daytime)))))))))
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (bit_str_type_name
              (bool_name)))
          (simple_type_init
            (constant_expr
              (constant
                (bool_literal
                  (bool_literal_with_numeric)))))))
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (l_dt_type_name))
          (simple_type_init
            (constant_expr
              (constant
                (time_literal
                  (date_and_time
                    (long_date_and_time
                      (l_date_and_time_type_name)
                      (date_and_daytime))))))))))
    (func_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (assignment
            (constant
              (numeric_literal
                (int_literal
                  (signed_int
                    (unsigned_int)))))))))))

================================================================================
String escape sequences in either case
================================================================================

FUNCTION f : INT
VAR s : STRING; END_VAR
	s := 'a$nb$Nc$td$Te$$f$27g';
END_FUNCTION

--------------------------------------------------------------------------------

(source_file
  (func_decl
    (identifier)
    (numeric_type_name
      (int_type_name
        (sign_int_type_name
          (int_name))))
    (var_decls
      (var_decl_init_list
        (variable_list
          (identifier))
        (var_decl_init
          (simple_type_spec
            (string_type_name
              (string_name))))))
    (func_body
      (stmt_list
        (assign
          (variable_access
            (variable
              (begin_path_expression
                (path_expression
                  (var_access
                    (field))))))
          (assignment
            (constant
              (char_literal
                (char_str
                  (s_byte_char_str))))))))))
